[package]
name = "claude9"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
claude-codes = { version = "2.1.53", default-features = false, features = ["types"] }
